--- a/02-DataStructuresFunctions.Rmd
+++ b/02-DataStructuresFunctions.Rmd
@@ -127,7 +127,7 @@ Analogously, package meteoland provides several functions to manipulate spatio-t
 3. The package provides functions to extract meteorological data (these allow reading data in memory or from the disk):
   + Functions `extractgridindex()` extracts the meteorology of a particular pixel index from a grid and returns a data frame with dates in rows and variables in columns.
   + Function `extractgridpoints()` extract the meteorology of point locations from a grid and returns an object of `SpatialPointsMeteorology`, similarly to the `[` operator.
-  + Function `extractdates()` extracts the meteorology of a set of dates from a `SpatialPointsMeteorology`, (or `SpatialGridMeteorology` or `SpatialPixelsMeteorology`) and returns a `SpatialPointDataFrame` (or `SpatialGridDataFrame` or `SpatialPixelsDataFrame`) for each date in a named list. This kind of conversion is also useful to export meteoland outputs to package [**raster**](https://cran.r-project.org/package=raster), which provides wrappers for the abovementioned **sp** classes.
+  + Functions `extractdates()` and `extractvars()` extract the meteorology of a set of dates (or variables, respectively) from a `SpatialPointsMeteorology` object, (or `SpatialGridMeteorology` or `SpatialPixelsMeteorology`) and returns a `SpatialPointDataFrame` (or `SpatialGridDataFrame` or `SpatialPixelsDataFrame`) for each date (resp. variable) in a named list. This kind of conversion is also useful to export meteoland outputs to package [**raster**](https://cran.r-project.org/package=raster), which provides wrappers for the abovementioned **sp** classes.
 4. Finally, the package provides some functions to reshape meteorological data structures into more general structures of spatio-temporal data, so that they can be more easily processed, combined and stored using other R packages. In particular, objects of classes `SpatialPointsMeteoroloy`, `SpatialGridMeteorology` and `SpatialPixelsMeteorology` can be reshaped into objects of packages [**stars**](https://cran.r-project.org/package=stars) and [**spacetime**](https://cran.r-project.org/package=spacetime) by using calls like `as(x, "stars")` or `as(x, "STFDF")`.
 
 
